--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
     </div>
 
     <!-- Script -->
-    <script src="js/jscolor.js"></script>
+    <script src="js/venders/jscolor.js"></script>
+    <script src="js/global.js"></script>
+    <script src="js/libraries/canvas.js"></script>
+    <script src="js/libraries/brush-and-eraser.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
