added HandleBrash class and Eraser class

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
     <script src="js/venders/jscolor.js"></script>
     <script src="js/global.js"></script>
     <script src="js/libraries/canvas.js"></script>
-    <script src="js/libraries/brush-and-eraser.js"></script>
+    <script src="js/libraries/handle-image.js"></script>
+    <script src="js/libraries/handle-brush.js"></script>
+    <script src="js/libraries/eraser.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
